Funcionario:
    Fixed warnings, except about the never used methods;
    Limited the iteration loop in the contem method to the length of the array;
    Just made a research and found helpful info about exception handling,
which includes names of exceptions and that some sources use "e" as an alias for the variable;
    IndexOutOfBounds treated in posicaoOcupada();
    remove() needs several tests and fixes;
    There's a huge complication with the list as an inner class. Since the list isn't static,
I can't create one of its instaces without an employee. I don't get the point of our professor;
    Someone told me the prof. decided to include another class named Business to carry the array. Finally;

    Added the requirements in Revisao.txt;
    Included isFull();
    tamanho() now simply returns the comprimento atribute;
    imprime() has a stop condition now that the array is sorted with null to the end;
    ordenaPorNome() now uses insertion sort;
    Include a .txt file with names and salaries;

    added numerous tasks to the backlog;