@@ -3,7 +3,7 @@ Funcionario:
     Limited the iteration loop in the contem method to the length of the array;
     Just made a research and found helpful info about exception handling,
 which includes names of exceptions and that some sources use "e" as an alias for the variable;
-    IndexOutOfBounds treated in posicaoOcupada();
+    IndexOutOfBounds handled in posicaoOcupada();
     remove() needs several tests and fixes;
     There's a huge complication with the list as an inner class. Since the list isn't static,
 I can't create one of its instaces without an employee. I don't get the point of our professor;
@@ -17,3 +17,4 @@ I can't create one of its instaces without an employee. I don't get the point of
     Include a .txt file with names and salaries;
 
     added numerous tasks to the backlog;
+    Empresa.busca() handles ArrayIndexOutOfBoundsException;
